--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+body {
+    height: 100vh;
+    width: 100vw;
+}
+
+#root {
+    height: 100%;
+    width: 100%;
+}
+
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .App-logo {
@@ -15,7 +26,7 @@
 
 .App-header {
   background-color: #282c34;
-  //min-height: 100vh;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
