--- a/src/NodeWorkspace/node-menu.css
+++ b/src/NodeWorkspace/node-menu.css
@@ -1,7 +1,26 @@
 .NodeMenu {
-    z-index: 10;
     position: fixed;
-    /*width: 125px;*/
+    z-index: 10;
+    /*position: fixed;
+    text-align: center;
+    color: #222;
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 2px 4px 8px 1px rgba(0,0,0,0.7);
+    background: #FFF;*/
+}
+
+.NodeMenuList {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    
+    z-index: 10;
+    display: block;
+    position: absolute;
+    //left: 125px;
+    width: 125px;
     text-align: center;
     color: #222;
     border-radius: 4px;
@@ -9,12 +28,6 @@
     border-width: 1px;
     box-shadow: 2px 4px 8px 1px rgba(0,0,0,0.7);
     background: #FFF;
-}
-
-.NodeMenuList {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
 }
 
 .NodeMenuList::before {
@@ -40,6 +53,25 @@
     color: #FFF;
     background: #333;
     cursor: pointer;
+}
+
+.NodeMenuItem::after {
+    content: '';
+    border: 4px solid transparent;
+    border-top: 4px solid transparent;
+    margin-left: 12px;
+    margin-right: -5px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.NodeMenuItem.expandable::after {
+    border: 4px solid transparent;
+    border-left: 4px solid #222;
+}
+
+.NodeMenuItem.expandable:hover:after {
+    border-left: 4px solid white;
 }
 
 @keyframes menuAnim {
