--- a/src/Nodes/node-style.css
+++ b/src/Nodes/node-style.css
@@ -1,13 +1,19 @@
 .react-flow__node {
     padding: 10px;
     border-radius: 3px;
-    width: 150px;
+    width: 100px;
     font-size: 12px;
     background: #fff;
     color: #222;
     text-align: center;
     border-width: 1px;
     border-style: solid;
+}
+
+.react-flow__node:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
 }
 
 .react-flow__node.selected,
@@ -30,4 +36,15 @@
 
 .react-flow__node-InputNode .react-flow__handle {
     background: #0041d0;
+}
+
+.react-flow__node-OutputNode,
+.react-flow__node-OutputNode.selected,
+.react-flow__node-OutputNode.selected:hover {
+    border-color: #30a120;
+    --box-shadow-color: #30a120;
+}
+
+.react-flow__node-OutputNode .react-flow__handle {
+    background: #30a120;
 }
