--- a/src/Nodes/node-style.css
+++ b/src/Nodes/node-style.css
@@ -2,7 +2,7 @@
     padding: 10px;
     border-radius: 3px;
     width: 100px;
-    font-size: 12px;
+    font-size: 14px;
     background: #fff;
     color: #222;
     text-align: center;
@@ -47,4 +47,25 @@
 
 .react-flow__node-OutputNode .react-flow__handle {
     background: #30a120;
+}
+
+.edit-btn {
+    border: solid 1px #ccc;
+    border-radius: 15%;
+    vertical-align: middle;
+    background: #eee;
+    font-size: 12px;
+    margin: 0;
+    padding: 0px 2px;
+}
+
+.edit-btn i {
+    vertical-align: middle;
+    text-align: center;
+    font-size: 12px;
+}
+
+.edit-btn:hover {
+    cursor: pointer;
+    background: #eef;
 }
